# a4

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  log.json  pyproject.toml  rust-toolchain
.github/workflows/: ci.yml  sts.yml
a4/: __init__.py  bookgen.py  sts.py  sts_test.py  tests.py  uci.py  uci_test.py
benches/: eval.rs  position.rs
gambit/: Cargo.toml
gambit/benches/: position.rs
gambit/src/: core.rs  lib.rs  position.rs
gambit/src/core/: squareset.rs  types.rs
src/: book.json  book.rs  core.rs  debug.rs  eval.rs  lib.rs  log.rs  movegen.rs  position.rs  search.rs  table.rs  threads.rs  tracing.rs  uci.rs  zobrist.rs
src/core/: attacks.rs  move.rs  squareset.rs  types.rs
src/eval/: analysis.rs  eval.rs  score.rs  value.rs
src/search/: move_order.rs
src/tracing/: constants.rs  search.rs
tests/: run.py
tests/perft/: initial.json  kiwipete.json  position3.json  position4.json  position4_mirror.json  position6.json  talkchess.json
tests/quality/: lichess_tLsNw.json  undermine_4.json
tests/sts/: STS4.epd
tools/: ci.py  gdb.py
