[package]
name = "a4"
version = "0.1.0"
authors = ["Sean Gillespie <sean@swgillespie.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
bitflags = "1.2.1"
chashmap = "2.2.2"
thiserror = "1.0.23" 
lazy_static = "1.4.0"
structopt = "0.3.21"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.3"

[features]
default = []
trace-eval = []

[profile.release]
panic = 'abort'

[[bench]]
name = "position"
harness = false
