[package]
name = "a4"
version = "0.2.0"
authors = ["Sean Gillespie <sean@swgillespie.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0.64"
bitflags = "1.3.2"
chashmap = "2.2.2"
derive_more = "0.99.17"
thiserror = "1.0.34" 
lazy_static = "1.4.0"
structopt = "0.3.26"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
num_cpus = "1.13.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3"

[features]
default = []
trace-eval = []

[profile.release]
panic = 'abort'

[[bench]]
name = "position"
harness = false

[[bench]]
name = "eval"
harness = false