[tool.poetry]
name = "a4"
version = "0.1.0"
description = "Python support code for the a4 chess engine"
authors = ["Sean Gillespie <sean@swgillespie.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
chess = "^1.6.1"
requests = "^2.27.1"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
